added GenericSpecification instead od ClientSpecification.java